<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/kos_its" />
        </FrameLayout>

        <TextView
            android:id="@+id/judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:lineSpacingMultiplier="1"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:text="@string/title" />

        <TextView
            android:id="@+id/deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:lineSpacingMultiplier="1"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:text="@string/Deksripsi" />


        <TextView
            android:id="@+id/tv_item_bahan_bahan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="25dp"
            android:lineSpacingMultiplier="1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/benefit_value" />

        <TextView
            android:id="@+id/benefit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:lineSpacingMultiplier="1"
            android:textSize="15sp"
            android:gravity="left"
            android:text="@string/benefit" />

    </LinearLayout>

</ScrollView>